--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.90.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fast-xml-parser": "^5.3.3",
     "lucide-react": "^0.562.0",
     "next": "^15.5.9",
     "react": "^19.2.3",
