feat: implement media review functionality
- Added new API routes for managing media reviews including fetching unreviewed items, marking items as reviewed, and retrieving review statistics.
- Introduced a new sync feature to fetch media from the Plex server and update the review data.
- Created components for reviewing new media, including a header, review toolbar, and reviewable media cards.
- Implemented hooks for managing media sync, new media fetching, and review actions.
- Enhanced the UI with loading states and error handling for a better user experience.
- Updated the data structure to store media review information and ensure persistence.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     environment:
       # Next.js Configuration
       - NODE_ENV=production
+    volumes:
+      - ./data:/app/data
     restart: unless-stopped
     networks:
       - plex-network
